# Galaxy-Engine

./: .gitignore  CMakeLists.txt  CodeGuide.md  GalaxyEngine.sln  LICENSE  Makefile  README.md  n-BodySim.sln  update_log.txt
.github/: pull_request_template.md
GalaxyEngine/: CMakeLists.txt  UI.cpp  UI.h  brush.h  button.cpp  camera.cpp  camera.h  compilerCommand.txt  densitySize.h  intrinsic_patch.h  main.cpp  n-BodySim.vcxproj  n-BodySim.vcxproj.filters  parameters.h  particle.h  particleSelection.cpp  particleSelection.h  particleSubdivision.cpp  particleSubdivision.h  particleTrails.cpp  particlesSpawning.h  physics.h  quadtree.cpp  quadtree.h  resources.aps  resources.rc  rightClickSettings.cpp  rightClickSettings.h  screenCapture.cpp  slingshot.cpp  slingshot.h  updateScene.h  update_log.txt
GalaxyEngine/Config/: config.txt
GalaxyEngine/Shaders/: bloom.fs
GalaxyEngine/TempFiles/: particle.fs  particle.vs
GalaxyEngine/include/: globalLogic.h  parameters.h  pch.h
GalaxyEngine/include/IO/: io.h
GalaxyEngine/include/Particles/: QueryNeighbors.h  clusterMouseHelper.h  densitySize.h  neighborSearch.h  particle.h  particleColorVisuals.h  particleDeletion.h  particleSelection.h  particleSpaceship.h  particleSubdivision.h  particleTrails.h  particlesSpawning.h
GalaxyEngine/include/Physics/: SPH.h  SPH3D.h  collisionGrid.h  constraint.h  field.h  light.h  materialsSPH.h  morton.h  physics.h  physics3D.h  quadtree.h  slingshot.h
GalaxyEngine/include/Renderer/: rayMarching.h
GalaxyEngine/include/Sound/: sound.h
GalaxyEngine/include/UI/: UI.h  brush.h  button.h  controls.h  rightClickSettings.h  slider.h
GalaxyEngine/include/UX/: camera.h  copyPaste.h  randNum.h  saveSystem.h  screenCapture.h
GalaxyEngine/include/raylib/: raylib.h
GalaxyEngine/src/: globalLogic.cpp  main.cpp  parameters.cpp  resources.rc
GalaxyEngine/src/Particles/: particleSelection.cpp  particleSubdivision.cpp  particleTrails.cpp  particlesSpawning.cpp
GalaxyEngine/src/Physics/: SPH.cpp  SPH3D.cpp  collisionGrid.cpp  light.cpp  morton.cpp  physics.cpp  physics3D.cpp  quadtree.cpp  slingshot.cpp
GalaxyEngine/src/Sound/: sound.cpp
GalaxyEngine/src/UI/: UI.cpp  brush.cpp  button.cpp  controls.cpp  rightClickSettings.cpp  slider.cpp
GalaxyEngine/src/UX/: camera.cpp  randNum.cpp  saveSystem.cpp  screenCapture.cpp
Saves/: DefaultSettings.galaxsim
UNUSEDCODE/: newQuadtree.cpp  newQuadtree.h  particleTrailsWithAllClusters.h  particlesSelectionWithAllClusters.cpp
cmake/: ffmpeg.cmake  glm.cmake  imgui.cmake  openmp.cmake  raylib.cmake  yaml.cmake
n-BodySim/: Main.cpp  brush.cpp  brush.h  button.cpp  button.h  camera.cpp  camera.h  compilerCommand.txt  controls.cpp  controls.h  densitySize.h  morton.cpp  morton.h  mouseTrailDot.cpp  mouseTrailDot.h  n-BodySim.vcxproj  n-BodySim.vcxproj.filters  parameters.h  particleColorVisuals.h  particleDeletion.h  particleSelection.cpp  particleSelection.h  particleSubdivision.cpp  particleSubdivision.h  particleTrails.cpp  particleTrails.h  particlesSpawning.cpp  particlesSpawning.h  physics.cpp  planet.cpp  planet.h  quadtree.cpp  quadtree.h  range.h  rightClickSettings.h  screenCapture.cpp  screenCapture.h  simulation.h  slider.cpp  slider.h  (+4 more)
n-BodySim/UNUSEDCODE/: particleTrailsWithAllClusters.cpp  particlesSelectionWithAllClusters.h
